force-app/main/default/objects/os_Request__c/fields/os_Counties__c.field-meta.xml
<CustomField>
    <fullName>os_Counties__c</fullName>
    <label>Counties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>