force-app/main/default/objects/os_Request__c/fields/os_Days_since_Last_Activity_Logged__c.field-meta.xml
<CustomField>
    <fullName>os_Days_since_Last_Activity_Logged__c</fullName>
    <formula>NOW()-  os_LastActivityLoggedOn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Last Activity Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>