force-app/main/default/objects/os_Request__c/fields/os_DaysOnMarketMax__c.field-meta.xml
<CustomField>
    <fullName>os_DaysOnMarketMax__c</fullName>
    <label>Days On Market Max</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>