force-app/main/default/objects/os_Request__c/fields/os_DaysOnMarketMin__c.field-meta.xml
<CustomField>
    <fullName>os_DaysOnMarketMin__c</fullName>
    <label>Days On Market Min</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>