force-app/main/default/objects/os_Request__c/fields/os_Decoration__c.field-meta.xml
<CustomField>
    <fullName>os_Decoration__c</fullName>
    <label>Decoration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unmodernised</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>