force-app/main/default/objects/os_Request__c/fields/os_Description_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Description_pb__c</fullName>
    <label>Saved Search Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>