force-app/main/default/objects/os_Request__c/fields/os_Desired_Viewing_dates_2__c.field-meta.xml
<CustomField>
    <fullName>os_Desired_Viewing_dates_2__c</fullName>
    <label>Desired Viewing dates 2</label>
    <type>Date</type>
</CustomField>