force-app/main/default/objects/os_Request__c/fields/os_Do_Not_Run_Automation__c.field-meta.xml
<CustomField>
    <fullName>os_Do_Not_Run_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Run Automation</label>
    <type>Checkbox</type>
</CustomField>