force-app/main/default/objects/os_Request__c/fields/os_Email_Verified__c.field-meta.xml
<CustomField>
    <fullName>os_Email_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Verified</label>
    <type>Checkbox</type>
</CustomField>