force-app/main/default/objects/os_Request__c/fields/os_EmailFrequency__c.field-meta.xml
<CustomField>
    <fullName>os_EmailFrequency__c</fullName>
    <label>Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>