force-app/main/default/objects/os_Request__c/fields/os_Entered_Offering__c.field-meta.xml
<CustomField>
    <fullName>os_Entered_Offering__c</fullName>
    <label>Entered &apos;Offering&apos;</label>
    <type>DateTime</type>
</CustomField>