force-app/main/default/objects/os_Request__c/fields/os_EstimatedHomeValue_pb__c.field-meta.xml
<CustomField>
    <fullName>os_EstimatedHomeValue_pb__c</fullName>
    <label>Estimated Home Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>