force-app/main/default/objects/os_Request__c/fields/os_Expiry_Count__c.field-meta.xml
<CustomField>
    <fullName>os_Expiry_Count__c</fullName>
    <label>Expiry Count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>