force-app/main/default/objects/os_Request__c/fields/os_FlooringType__c.field-meta.xml
<CustomField>
    <fullName>os_FlooringType__c</fullName>
    <label>Flooring Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>