force-app/main/default/objects/os_Request__c/fields/os_Follow_up_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>os_Follow_up_Call_Center__c</fullName>
    <label>Follow up Call Center</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bad customer service / Customer Complaint</fullName>
            </value>
            <value>
                <fullName>Not contacted - Found a suitable property</fullName>
            </value>
            <value>
                <fullName>Client not contacted- Agent did not respond</fullName>
            </value>
            <value>
                <fullName>Client not contacted- Lead Redirected (Negative)</fullName>
            </value>
            <value>
                <fullName>Client was not contacted by Agent - now not interested</fullName>
            </value>
            <value>
                <fullName>Client was not contacted by Agent- CCE connected the call to the agent</fullName>
            </value>
            <value>
                <fullName>Client contacted by Agent</fullName>
            </value>
            <value>
                <fullName>Client contacted by Agent - Client not Interested</fullName>
            </value>
            <value>
                <fullName>Client Requested Agent to Call back</fullName>
            </value>
            <value>
                <fullName>Client Requested Agent to send Email</fullName>
            </value>
            <value>
                <fullName>Client Requested Agent to send Whatsapp.</fullName>
            </value>
            <value>
                <fullName>Client Not Contactable</fullName>
            </value>
            <value>
                <fullName>Client Didn&apos;t Respond</fullName>
            </value>
            <value>
                <fullName>Client Not contacted by Agent - Requested to get back to the client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>