force-app/main/default/objects/os_Request__c/fields/os_Format_Submission_Phone__c.field-meta.xml
<CustomField>
    <fullName>os_Format_Submission_Phone__c</fullName>
    <formula>IF(  os_Submission_Phone__c != NULL ,
IF (
BEGINS( os_Submission_Phone__c , &apos;&apos;),
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( os_Submission_Phone__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),
IF (
BEGINS( os_Submission_Phone__c , &apos;+&apos;),
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE( os_Submission_Phone__c , &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;),&quot;+&quot;, &quot;&quot;),
Null
)),Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Format Submission Phone</label>
    <type>Text</type>
</CustomField>