force-app/main/default/objects/os_Request__c/fields/os_Front_Desk_Email_parser_Full_txt__c.field-meta.xml
<CustomField>
    <fullName>os_Front_Desk_Email_parser_Full_txt__c</fullName>
    <label>Front Desk Email parser Full txt</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>