force-app/main/default/objects/os_Request__c/fields/os_FullBathrooms_pb_max__c.field-meta.xml
<CustomField>
    <fullName>os_FullBathrooms_pb_max__c</fullName>
    <label>Bathrooms - max</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>