force-app/main/default/objects/os_Request__c/fields/os_GarageSpaceMax__c.field-meta.xml
<CustomField>
    <fullName>os_GarageSpaceMax__c</fullName>
    <label>Garage Space Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>