force-app/main/default/objects/os_Request__c/fields/os_GarageSpaceMin__c.field-meta.xml
<CustomField>
    <fullName>os_GarageSpaceMin__c</fullName>
    <label>Garage Space Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>