force-app/main/default/objects/os_Request__c/fields/os_gsir_brokers_listing_id__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_brokers_listing_id__c</fullName>
    <label>Broker&apos;s Listing ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>