force-app/main/default/objects/os_Request__c/fields/os_gsir_campaign_name__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_campaign_name__c</fullName>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>