force-app/main/default/objects/os_Request__c/fields/os_gsir_community_propertybase__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_community_propertybase__c</fullName>
    <label>Community Propertybase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Al Barari</fullName>
            </value>
            <value>
                <fullName>Arabian Ranches</fullName>
            </value>
            <value>
                <fullName>Arabian Ranches 2</fullName>
            </value>
            <value>
                <fullName>Bluewaters</fullName>
            </value>
            <value>
                <fullName>Business Bay</fullName>
            </value>
            <value>
                <fullName>City Walk</fullName>
            </value>
            <value>
                <fullName>DIFC</fullName>
            </value>
            <value>
                <fullName>Downtown Dubai</fullName>
            </value>
            <value>
                <fullName>Dubai Creek Harbour (The Lagoons)</fullName>
            </value>
            <value>
                <fullName>Dubai Festival City</fullName>
            </value>
            <value>
                <fullName>Dubai Hills Estate</fullName>
            </value>
            <value>
                <fullName>Dubai Marina</fullName>
            </value>
            <value>
                <fullName>Dubai Media City</fullName>
            </value>
            <value>
                <fullName>Emirates Hills</fullName>
            </value>
            <value>
                <fullName>Greens</fullName>
            </value>
            <value>
                <fullName>Jumeirah</fullName>
            </value>
            <value>
                <fullName>Jumeirah Beach Residence</fullName>
            </value>
            <value>
                <fullName>Jumeirah Golf Estates</fullName>
            </value>
            <value>
                <fullName>Jumeirah Islands</fullName>
            </value>
            <value>
                <fullName>Jumeirah Lake Towers</fullName>
            </value>
            <value>
                <fullName>Jumeirah Park</fullName>
            </value>
            <value>
                <fullName>Jumeirah Village Circle</fullName>
            </value>
            <value>
                <fullName>Meadows</fullName>
            </value>
            <value>
                <fullName>Mohammed Bin Rashid City</fullName>
            </value>
            <value>
                <fullName>Palm Jumeirah</fullName>
            </value>
            <value>
                <fullName>Reem</fullName>
            </value>
            <value>
                <fullName>The Hills</fullName>
            </value>
            <value>
                <fullName>The Lakes</fullName>
            </value>
            <value>
                <fullName>The Springs</fullName>
            </value>
            <value>
                <fullName>The Views</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>