force-app/main/default/objects/os_Request__c/fields/os_gsir_Contact_External_ID__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_Contact_External_ID__c</fullName>
    <formula>os_Contact__r.os_gsir_contact_external_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact External ID</label>
    <type>Text</type>
</CustomField>