force-app/main/default/objects/os_Request__c/fields/os_gsir_Department__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_Department__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>