force-app/main/default/objects/os_Request__c/fields/os_gsir_expired__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>