force-app/main/default/objects/os_Request__c/fields/os_gsir_inquiry_external_id__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_inquiry_external_id__c</fullName>
    <label>Inquiry External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>