force-app/main/default/objects/os_Request__c/fields/os_gsir_lead_media_name__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_lead_media_name__c</fullName>
    <label>Lead Media Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIR.com</fullName>
            </value>
            <value>
                <fullName>SPFrealty.com</fullName>
            </value>
            <value>
                <fullName>Digital Campaign</fullName>
            </value>
            <value>
                <fullName>EDM - Propertyfinder.ae</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>Flyers</fullName>
            </value>
            <value>
                <fullName>Gulf News Website</fullName>
            </value>
            <value>
                <fullName>SMS Campaign</fullName>
            </value>
            <value>
                <fullName>Social Media Campaign</fullName>
            </value>
            <value>
                <fullName>Staff Mailer</fullName>
            </value>
            <value>
                <fullName>Zawya Mailer</fullName>
            </value>
            <value>
                <fullName>Sotheby&apos;s Catalogue</fullName>
            </value>
            <value>
                <fullName>Arabian Business</fullName>
            </value>
            <value>
                <fullName>Art of Tomorrow 2016</fullName>
            </value>
            <value>
                <fullName>Digital Kiosks</fullName>
            </value>
            <value>
                <fullName>Gulf News Mailer</fullName>
            </value>
            <value>
                <fullName>B2C - eDM - Azure/Louvre Launch</fullName>
            </value>
            <value>
                <fullName>SMS - Azure/Louvre Launch</fullName>
            </value>
            <value>
                <fullName>B2C eDM</fullName>
            </value>
            <value>
                <fullName>Online Banners</fullName>
            </value>
            <value>
                <fullName>Rezora.com</fullName>
            </value>
            <value>
                <fullName>Gulf SIR.com - Google Adwords</fullName>
            </value>
            <value>
                <fullName>Facebook - Lead Generation Ads</fullName>
            </value>
            <value>
                <fullName>Facebook - Messages</fullName>
            </value>
            <value>
                <fullName>hut.ae</fullName>
            </value>
            <value>
                <fullName>James Edition</fullName>
            </value>
            <value>
                <fullName>Dubizzle.com</fullName>
            </value>
            <value>
                <fullName>Propertyfinder.ae</fullName>
            </value>
            <value>
                <fullName>Propertywifi.com</fullName>
            </value>
            <value>
                <fullName>Gulfpropertyportal.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>