force-app/main/default/objects/os_Request__c/fields/os_gsir_lead_routing_source__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_lead_routing_source__c</fullName>
    <label>Routing Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL Call Center team</fullName>
            </value>
            <value>
                <fullName>ALL C&amp;S Team</fullName>
            </value>
            <value>
                <fullName>All Gulf SIR</fullName>
            </value>
            <value>
                <fullName>All Offplan Team</fullName>
            </value>
            <value>
                <fullName>All SPF Team</fullName>
            </value>
            <value>
                <fullName>Core Area 1_Downtown Leasing Team</fullName>
            </value>
            <value>
                <fullName>Core Area 1_Dubai marina Sales Team</fullName>
            </value>
            <value>
                <fullName>Core Area 1_Emirates Hills</fullName>
            </value>
            <value>
                <fullName>Core Area 2_Jumeirah Golf Estate</fullName>
            </value>
            <value>
                <fullName>Core Area 3_Dubai marina Leasing Team</fullName>
            </value>
            <value>
                <fullName>Core Area 3_Dubai marina Sales Team</fullName>
            </value>
            <value>
                <fullName>Core Area 5_Palm Apartments team</fullName>
            </value>
            <value>
                <fullName>Core Area 5_Palm Villa team</fullName>
            </value>
            <value>
                <fullName>Core Area 6_Luxury Rental Team</fullName>
            </value>
            <value>
                <fullName>Core Area 7_Al barari Team</fullName>
            </value>
            <value>
                <fullName>Core Area 8_Jumeirah park Team</fullName>
            </value>
            <value>
                <fullName>Core Area 9_MBRC Team</fullName>
            </value>
            <value>
                <fullName>HERE Client Rep Team</fullName>
            </value>
            <value>
                <fullName>Generic Team # 1</fullName>
            </value>
            <value>
                <fullName>Generic Team # 2</fullName>
            </value>
            <value>
                <fullName>Generic Team # 3</fullName>
            </value>
            <value>
                <fullName>Generic Team # 4</fullName>
            </value>
            <value>
                <fullName>Generic Team # 5</fullName>
            </value>
            <value>
                <fullName>Generic Team # 6</fullName>
            </value>
            <value>
                <fullName>Generic Team # 7</fullName>
            </value>
            <value>
                <fullName>Generic Team # 8</fullName>
            </value>
            <value>
                <fullName>Generic Team # 9</fullName>
            </value>
            <value>
                <fullName>Generic Team # 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>