force-app/main/default/objects/os_Request__c/fields/os_gsir_lead_source__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_lead_source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Residences East Tower</fullName>
            </value>
            <value>
                <fullName>1 Residences PC</fullName>
            </value>
            <value>
                <fullName>1 Residences - Sales Centre</fullName>
            </value>
            <value>
                <fullName>3rd Party Agency</fullName>
            </value>
            <value>
                <fullName>ActivePipe</fullName>
            </value>
            <value>
                <fullName>Agent Internal Referral</fullName>
            </value>
            <value>
                <fullName>Agent to Agent deal</fullName>
            </value>
            <value>
                <fullName>ALTA - Mr. C App</fullName>
            </value>
            <value>
                <fullName>ALTA - Mr. C Website</fullName>
            </value>
            <value>
                <fullName>ALTA Website</fullName>
            </value>
            <value>
                <fullName>Al Zorah WA Marketing</fullName>
            </value>
            <value>
                <fullName>Atlantis the Royal - Landline</fullName>
            </value>
            <value>
                <fullName>Atlantis the Royal - Sales Suite</fullName>
            </value>
            <value>
                <fullName>Atlantis the Royal - Website</fullName>
            </value>
            <value>
                <fullName>B2B Personal Relationship</fullName>
            </value>
            <value>
                <fullName>Baccarat Residences Sales Centre</fullName>
            </value>
            <value>
                <fullName>Canal Front Residences -Sales Center</fullName>
            </value>
            <value>
                <fullName>Canal Front Residences - What&apos;s app Agency Group</fullName>
            </value>
            <value>
                <fullName>CCE - Did not probe</fullName>
            </value>
            <value>
                <fullName>Client doenst want to provide</fullName>
            </value>
            <value>
                <fullName>Commversion</fullName>
            </value>
            <value>
                <fullName>Crimtan</fullName>
            </value>
            <value>
                <fullName>Criteo PC</fullName>
            </value>
            <value>
                <fullName>DIFC Office - Walkin</fullName>
            </value>
            <value>
                <fullName>DMCC Developer</fullName>
            </value>
            <value>
                <fullName>Drip Marketing</fullName>
            </value>
            <value>
                <fullName>Dubizzle</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>External Agent Referral</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>