force-app/main/default/objects/os_Request__c/fields/os_gsir_plot__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_plot__c</fullName>
    <label>Plot</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>