force-app/main/default/objects/os_Request__c/fields/os_gsir_preferred_contact_method__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_preferred_contact_method__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Whatsap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>