force-app/main/default/objects/os_Request__c/fields/os_gsir_sender_recipient__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_sender_recipient__c</fullName>
    <label>Sender Recipient</label>
    <type>TextArea</type>
</CustomField>