force-app/main/default/objects/os_Request__c/fields/os_gsir_stage__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Migrated</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>