force-app/main/default/objects/os_Request__c/fields/os_gsir_state__c.field-meta.xml
<CustomField>
    <fullName>os_gsir_state__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>